# Proyecto-Final-POO

./: Nota (Por favor leer).txt  README.md
EcoMision/: AnimalHerido.cpp  AnimalHerido.h  BosqueHumedo.cpp  BosqueHumedo.h  CMakeLists.txt  CentroRecuperacionAnimal.cpp  CentroRecuperacionAnimal.h  EcoMision.cpp  EcoMision.h  Explorador.cpp  Explorador.h  FuenteContaminada.cpp  FuenteContaminada.h  LaboratorioAmbiental.cpp  LaboratorioAmbiental.h  ObjetoInteractuable.cpp  ObjetoInteractuable.h  Obstaculo.cpp  Obstaculo.h  PlantaMedicinal.cpp  PlantaMedicinal.h  Portal.cpp  Portal.h  ReservaNatural.cpp  ReservaNatural.h  ResiduoContaminante.cpp  ResiduoContaminante.h  RioContaminado.cpp  RioContaminado.h  SemillaNativa.cpp  SemillaNativa.h  SenderoMontania.cpp  SenderoMontania.h  VivideroRestauracion.cpp  VivideroRestauracion.h  Zona.cpp  Zona.h  main.cpp
